# embeddings

./: .gitignore  README.md  pyproject.toml
src/unified_embeddings/: __init__.py  __main__.py  model_router.py  servable_embedder.py  server.py
src/unified_embeddings/models/: multilingual-e5-instruct.py  nomic.py  simple.py  snowflake_arctic_embed_v2.py
tests/: test_main.py  test_serveable_embedder.py
