[project]
name = "unified-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michaël de Vries", email = "vries-m-de@belastingdienst.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sentence-transformers>=3.3.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[project.scripts]
unified-embeddings = "unified_embeddings.__main__:main"